# binary-visualizer

./: Cargo.toml  shell.nix
src/: lib.rs  main.rs  ml.rs  table.rs
